--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,4 +1,26 @@
-.logo {
+*{
+	box-sizing: border-box;
+	font-size: 16px;
+	margin: 0;
+	padding: 0;
+	font-family: 'Poppins', sans-serif;
+}
+
+
+html::-webkit-scrollbar {
+ background-color: AliceBlue;
+}
+
+html::-webkit-scrollbar-button {
+ background-color: rgb(101, 197, 230);
+
+}
+
+html::-webkit-scrollbar-thumb {
+ background-color: rgb(101, 197, 230);
+
+} 
+/* .logo {
 	width: 100px;
 }
 
@@ -8,4 +30,191 @@
 
 .message:hover {
 	background-color: yellow;
+} */
+
+
+ /* Home css */
+
+/*html, body, #root {
+	min-height: 100vh;
+}*/
+
+/*#root {
+	display: flex;
+	flex-direction: column;
+}*/
+
+.containermain {
+	display: flex;
+	flex-direction: column;
+	min-height: calc(100vh - 40px);
+	width: 100%;	
 }
+
+.show {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    position: absolute;
+    background-color: rgb(13, 13, 63);  
+    z-index: 10;
+    width: 100%;
+    min-height: 1100px;
+}
+
+.main {
+	background-color: lightblue;
+	min-height: 1000px;
+	/*text-align: center;*/
+	padding-bottom:60px;
+	flex: 1;
+	/*display: flex;
+	flex-direction: column;*/
+}
+ 
+.ask-btn {
+	float: right;
+	margin-right: 3rem;
+	background-color: chocolate;
+	color: white;
+}
+
+.ask-btn:hover {
+	background-color:rgb(218, 74, 22);
+	color:white;
+	border: 2px solid brown;
+}
+
+
+
+label, input {
+	display: block;
+	size: 50px;
+	width: 100%;
+	margin: 10px;
+	
+}
+
+label {
+	color: white;
+	float: left;
+	font-size: 25px;
+}
+
+input {
+	height: 30px;
+	font-size: 20px;
+}
+
+h1, h2 {
+	color: chocolate;
+	padding-top: 30px;
+	text-align: center;
+
+}
+
+
+h1 {
+	-webkit-text-stroke: 0.6px black;
+
+	font-size: 35px;
+}
+
+.main-p {
+	text-align: center;
+}
+
+.logout-button {
+	cursor: pointer;
+	width: 100px;
+	height: 30px;
+	border-radius: 4px;
+	background-color: green;
+	color: white;
+	position: left;
+	font-size: 18px;
+}
+
+.logout-button:hover {
+	background-color: lightgreen;
+	color: black;
+} 
+
+.categoryBtn {
+	width: 300px;
+	height: 40px;
+	margin: 10px;
+}
+
+.mainCatbtn {
+	height: auto;
+}
+
+form {
+	max-width: 600px;
+	/*position: relative;*/
+	margin: auto;
+	padding: auto;
+	margin-top: 20px;
+}
+
+#categoryDiv {
+	display: flex;
+	flex-direction: column;
+	padding-bottom: 20px;
+	margin: 10px;
+}
+
+.questionsDiv {	
+	border: none;
+	width: 100%;
+	margin: 0 auto;
+	min-height: 100vh;
+	background-color: lightblue;
+}
+
+/* Navigation bar */
+
+.navigation {
+	/*display: flex;*/
+	/*flex-direction: space-between;*/
+	overflow: hidden;
+	min-width: 80%;
+	height: 100px;
+	/*border: 1px solid black;*/
+	background-color: lightblue;
+	/*background-color: lightgrey;*/
+}
+
+.logomain {
+	height: 80px;
+	padding-top: 30px;
+	padding-left: 20px;
+	margin: auto;
+}
+
+.top {
+	min-width: 80%;
+}
+
+ul {
+	list-style-type: none;
+	margin: 40px;
+	width: 420px;/*300px;*/
+	padding: 0;
+	float: right;
+}
+
+ul li {
+	display: inline-block;
+	margin: 10px;
+	padding-right: 30px;
+	padding-left: 30px;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+	/*float: right;*/
+}
+
