--- a/client/src/pages/Loginmaintest.css
+++ b/client/src/pages/Loginmaintest.css
@@ -1,18 +1,11 @@
 html, body, #root {
    width: 100%;
-   /*height: 100%;*/
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
 }
-
-
-/*Root Container*/
-
-
 .root-container {
   --blue_theme: #70a1ff;
-   /*background-color: #70a1ff;*/
    width: 100%;
    height: 100%;
    display: flex;
@@ -23,39 +16,19 @@ html, body, #root {
    padding-bottom: 50px;
 }
 
-
-/*.upmain {
-   background: lightblue;
-   z-index: 10;
-}*/
-
-/*.upmain {
-   min-height: 100vh;
-}*/
-
-/*.upmain {
-   display: flex;
-   flex-direction: column;
-   /*height: 100%;*/
-/*}*/
-
-
-
-
 .box-controller {
    visibility: visible;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
-   max-width: 26em;/*24em;*/
-   min-width: 24em;/*21em;*/
-   height: 40px;/*35px;*/
+   max-width: 26em;
+   min-width: 24em;
+   height: 40px;
    -webkit-box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
    box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
    margin-bottom: 30px;
    align-items: center;
    transition: visibility 0.5s ease-out;
-   /*border: 2px solid black;*/
    border-radius: 4px;
 }
 
@@ -66,20 +39,10 @@ html, body, #root {
    height: 100%;
    line-height: 2;
    cursor: pointer;
-   /*border-radius: 4px;*/
-   /*border-bottom: black 3px solid;*/
 }
-
-/*.controller:active {
-    background-color: lightblue;
-}*/
-
-/*Currently Selected Controller*/
-
 .selected-controller {
    transition: border 0.3s ease-out;
-   border-bottom: 4px solid #70a1ff; /*var(blue_theme);*/
-   /*transition: "all .5s ease";*/
+   border-bottom: 4px solid #70a1ff; 
   -webkit-transition: "border .5s ease-out";
   -moz-transition: "border .5s ease-out";
 }
@@ -104,16 +67,10 @@ html, body, #root {
 .inner-container.show {
    visibility: visible;
 }
-
-
-/*Header*/
-
 .header {
    text-align: center;
    padding: 5px;
    margin-bottom: 17px;
-   /* margin-left: 35px; */
-   /* margin-right: 35px; */
    font-family: Ozxgen, sans-serif;
    font-size: 22px;
    -webkit-text-stroke: 0.6px black;
@@ -122,10 +79,7 @@ html, body, #root {
 
 
 .header:focus {
-
    transition: border 0.3s ease-out;
-   /*border-bottom: 4px solid #70a1ff;*/ /*var(blue_theme);*/
-   /*transition: "all .5s ease";*/
    -webkit-transition: "border .5s ease-out";
    -moz-transition: "border .5s ease-out";
 }
@@ -143,12 +97,9 @@ html, body, #root {
    flex-direction: column;
    margin-top: 5px;
    margin-bottom: 5px;
-   padding: auto;/*changed by me*/
-   width: 100%; /*changed by me*/
+   padding: auto;
+   width: 100%;
 }
-
-
-/*Label*/
 
 .login-label {
    font-family: Oxygen, sans-serif;
@@ -159,35 +110,15 @@ html, body, #root {
    margin-bottom: 10px;
    color: rgb(42, 44, 43);
    -webkit-text-stroke: 0.6px black;
-   /*width: 100%;
-   margin: 0;*/
 }
-
-/*label {
-   font-family: Oxygen, sans-serif;
-   font-size: 20px;
-   font-weight: 600;
-   padding-left: 5px;
-   margin-top: 10px;
-   margin-bottom: 10px;
-   -webkit-text-stroke: 0.6px black;
-   margin-right: 0;
-   margin-left: 0;
-   color: blue;
-   /*width: 100%;
-   margin: 0;*/
-/*}*/
-
-/*Input*/
 
 .login-input {
    height: 2.1em;
    border-radius: 3px;
    border: .5px solid #70a1ff;
    transition: border 5px 0.3s ease-out;
-   -webkit-transition: "border 2px .3s ease-out";/*added*/
-   -moz-transition: "border 2px .3s ease-out";/*added*/
-   /*padding: 13px;*/
+   -webkit-transition: "border 2px .3s ease-out";
+   -moz-transition: "border 2px .3s ease-out";
    padding: auto;
    font-family: Oxygen, sans-serif;
    font-size: 19px;
@@ -208,18 +139,12 @@ html, body, #root {
    box-shadow: 0px 0px 20px rgba(15, 15, 15, 0.2);
 }
 
-/*Input Placeholder*/
-
-
 .login-input::placeholder {
    font-family: Oxygen, sans-serif;
-   font-size: 16px; /*color: rgba(46, 213, 116, 0.839);*/
    color: rgba(15, 15, 15, 0.4);
 }
 
 .login-btn {
-   /*padding: 2px 30px;*/
-   /* background-color: #417cef; */
    border: 0;
    font-size: 18px;
    border-radius: 3px;
@@ -244,10 +169,6 @@ html, body, #root {
    color: #e74c3c;
    font-size: 16px;
 }
-
-
-
-/*Password*/
 
 .password-state {
    display: flex;
