--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -164,3 +164,16 @@ a {
 	text-decoration: none;
 }
 
+.show {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: hsl(0, 0%, 0%, 0.9);  
+    z-index: 10;
+    width: 100%;
+    height: 100vh;
+    overflow-y: hidden;
+}
+
+
