--- a/client/src/components/AskQuestionForm/AskQuestionForm.css
+++ b/client/src/components/AskQuestionForm/AskQuestionForm.css
@@ -1,6 +1,6 @@
 .askQuestionStyle label{
     display: block;
-    color: black;
+    color: darkslategray;
 	max-width: 100%;
     font-size: 1.5rem;
     font-weight: bolder;
@@ -11,12 +11,16 @@
 .askQuestionStyle textarea{
 	max-width: 90%;
     border: 1px solid #ccc;
+    
 }
 
+.cancelQtn-btn {
+    background-color: #ccc;
+    border: none;
+    margin: 1rem 0.5rem;
+}
 .askQtn-btn:hover,
-.askQtn-btn:focus,
-.cancelQtn-btn,
-.cancelQtn-btn:active {
+.askQtn-btn:focus {
     background-color: cornsilk;
     border: 2px solid rgb(218, 74, 22);
     color:rgb(9, 9, 42);
@@ -25,8 +29,16 @@
     box-shadow: none;
 }
 
+.cancelQtn-btn:active,
 .cancelQtn-btn:hover,
-.cancelQtn-btn:focus,
+.cancelQtn-btn:focus {
+    background-color: darkslategray;
+    color: white; 
+    border:none;
+    margin: 1rem 0.5rem;
+}
+
+
 .askQtn-btn:active,
 .askQtn-btn {
     background-color: rgb(218, 74, 22);
@@ -43,8 +55,6 @@
 
 .askQuestionStyle {
    display: flex;
-   flex-direction: column;
-   justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    box-shadow: 0 4px 8px 0 rgb(210, 105, 30, 0.5), 0 6px 20px 0 rgb(210, 105, 30, 0.5);
@@ -52,6 +62,7 @@
    background-color: cornsilk;
    min-width: 50%;
    height: 95vh;
+   margin: auto;
 }
 
 .askQtn-banner h1{
@@ -104,11 +115,9 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    position: absolute;
-    background-color: rgb(9, 9, 42);
-    z-index: 10;
-    min-width: none;
-    min-height: 1100px;
+  
+    background-color: #282c34;
+    min-height: 100vh;
 }
 
 .hide {
