--- a/client/src/components/ReplyForm/RichText.css
+++ b/client/src/components/ReplyForm/RichText.css
@@ -6,7 +6,7 @@
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
-   color: white;
+   color: orange;
    margin-bottom: 5vh;
    text-align: center;
  }
