--- a/client/src/components/Question/Question.css
+++ b/client/src/components/Question/Question.css
@@ -2,12 +2,14 @@
 	text-align: left;
 	font-size: large;
 	font-weight: bold;
-	color: rgb(218, 74, 22);
+	/* color: rgb(218, 74, 22); */
+  color: brown;
 }
 
 .questionStyle h5{
 	font-weight: bolder;
-	color: #CD5C5C;
+	/* color: #CD5C5C; */
+  color: brown;
   margin-right: 0.5rem;
 }
 
