--- a/client/src/components/ListedQtnThread/ListedQtnThread.css
+++ b/client/src/components/ListedQtnThread/ListedQtnThread.css
@@ -12,7 +12,7 @@
 
 
 .questionStyle:hover{
-	background-color: rgb(0, 0, 0,0.1);
+	background-color: #ccc;
 
 }
 
@@ -25,17 +25,17 @@
 
 }
 .listedQtnThreadFormat::-webkit-scrollbar {
- background-color: AliceBlue;;
+ background-color: #ccc;
 
 }
 
 .listedQtnThreadFormat::-webkit-scrollbar-button {
- background-color: rgb(101, 197, 230);
+ background-color: #282c34;
 
 }
 
 .listedQtnThreadFormat::-webkit-scrollbar-thumb {
- background-color: rgb(101, 197, 230);
+ background-color: #282c34;
 
 }
 
@@ -59,6 +59,7 @@
   margin-right: 1rem;
   margin-bottom: 1rem;
   padding: 8rem;
+  color: Gold;
 }
 
 .delete-btn {
