--- a/client/src/components/ReplyForm/ReplyForm.css
+++ b/client/src/components/ReplyForm/ReplyForm.css
@@ -42,6 +42,8 @@
 
 }
 
-.ql-editor ql-blank {
-	background-color: red;
+.ql-editor {
+	overflow-y: scroll;
+	overflow-x: hidden;
+	word-break: break-all;
 }
