--- a/client/src/components/SelectedQtnThread/SelectedQtnThread.css
+++ b/client/src/components/SelectedQtnThread/SelectedQtnThread.css
@@ -32,3 +32,11 @@
 .hide {
 	display: none;
 }
+
+@media screen and (max-width: 600px) {
+		.selectedQtnContain {
+		float: none;
+		width: 80%;
+	}
+  
+}
