--- a/client/src/components/ListedQtnThread/ListedQtnThread.css
+++ b/client/src/components/ListedQtnThread/ListedQtnThread.css
@@ -50,6 +50,10 @@
   background-color: white;
 }
 
+.hide {
+    display: none;
+}
+
 .btn-wrapper {
   display: flex;
   justify-content: flex-end;
