--- a/client/src/components/Question/Question.css
+++ b/client/src/components/Question/Question.css
@@ -34,6 +34,9 @@
 }
 
 .questionStyle{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 	padding: 1rem;
   background-color: #F5F5DC;
 
@@ -42,5 +45,19 @@
 .questionStyle:hover{
 	background-color: rgb(0, 0, 0,0.1);
 
+}
+
+.question-section-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.question-section-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
