--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -6,6 +6,28 @@
 	font-family: 'Poppins', sans-serif;
 }
 
+.container {
+	margin-top: 40px;
+  margin-right: 15px;
+  margin-left: 15px;
+  grid-area: content;
+  min-height: calc(100vh - 140px);
+}
+
+@media (min-width: 40.0625em) {
+	.container {
+		margin-right: 30px;
+      margin-left: 30px;
+	}
+
+  }
+  @media (min-width: 1020px) {
+	.container {
+		margin-right: auto;
+    margin-left: auto;
+	}
+    
+  }
 
 html::-webkit-scrollbar {
  background-color: #ccc;
@@ -32,10 +54,7 @@ html::-webkit-scrollbar-thumb {
 	background-color: white;
 }
  
-.ask-btn {
-	position: fixed;
-	top: 1.2rem;
-	right: 1rem;
+.ask-btn {	
 	background-color: chocolate;
 	color: white;
 	z-index: 1;
@@ -120,13 +139,15 @@ form {
 	line-height: 10vh;
 }
 
-.loginWrapper {
+.navigation-list {
+	display: flex;
+	gap: 20px;
 	list-style: none;
 	float: right;
 	margin-right: 10rem;
 }
 
-.loginStyle {
+.navigation-list-item {
 	display: inline-block;	
 }
 
