--- a/client/src/components/Answer/Answer.css
+++ b/client/src/components/Answer/Answer.css
@@ -7,6 +7,10 @@
 }
 
 .answer-wrapper {
+	display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+	padding: 1rem;
 	background-color: beige;
 }
 
@@ -16,5 +20,19 @@
 
 .color-delete {
 	color: brown;
+}
+
+.answer-section-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.answer-section-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
