--- a/client/src/components/AskQuestionForm/AskQuestionForm.css
+++ b/client/src/components/AskQuestionForm/AskQuestionForm.css
@@ -5,7 +5,7 @@
    flex-wrap: wrap;
    box-shadow: 0 4px 8px 0 rgb(210, 105, 30, 0.5), 0 6px 20px 0 rgb(210, 105, 30, 0.5);
    text-align: center;
-   background-color: cornsilk;
+   background-color: white;
    max-width: 60%;
    min-height: 96vh;
    margin: 1rem auto 0 auto;  
@@ -35,7 +35,7 @@
 }
 .askQtn-btn:hover,
 .askQtn-btn:focus {
-    background-color: cornsilk;
+    background-color: white;
     border: 2px solid rgb(218, 74, 22);
     color:rgb(9, 9, 42);
     margin: 1rem 0.5rem;
