--- a/client/src/pages/Loginmain.css
+++ b/client/src/pages/Loginmain.css
@@ -1,7 +1,7 @@
 html, body, #root {
    width: 100%;
    box-sizing: border-box;
-   background-color: cornsilk;
+   background-color: white;
    padding: 0;
    margin: 0;
 }
