improved edit option in all question box

--- a/client/src/components/Question/Question.css
+++ b/client/src/components/Question/Question.css
@@ -3,13 +3,13 @@
 	font-size: large;
 	font-weight: bold;
 	/* color: rgb(218, 74, 22); */
-  color: brown;
+  color: sienna;
 }
 
 .questionStyle h5{
 	font-weight: bolder;
 	/* color: #CD5C5C; */
-  color: brown;
+  color: darkolivegreen;
   margin-right: 0.5rem;
 }
 
