--- a/client/src/components/QuestionById/QuestionById.css
+++ b/client/src/components/QuestionById/QuestionById.css
@@ -1,10 +1,5 @@
-.questionByIdStyle h3{
-	text-align: left;
-	font-size: large;
-	font-weight: bold;
-	/* color: rgb(218, 74, 22); */
-	color: Sienna;
-	margin-bottom: 1rem;
+.questionByIdStyle {
+	margin-top: 50px;
 }
 
 .questionByIdStyle span{
