--- a/client/src/components/ListedQtnThread/ListedQtnThread.css
+++ b/client/src/components/ListedQtnThread/ListedQtnThread.css
@@ -40,9 +40,14 @@
 }
 
 .tentative {
+  text-decoration: none;
+  color: black;
   background-color: white;
 }
-
+.tentative:hover {
+    color: black;
+    text-decoration: none;
+}
 
 .tent {
   display: flex;
@@ -58,12 +63,12 @@
 .edit-btn {
   margin-right: 1rem;
   margin-bottom: 1rem;
-  padding: 8rem;
+  padding: 0.3rem;
   color: Gold;
 }
 
 .delete-btn {
-  padding: 1rem;
+  padding: 0.3rem;
   margin-right: 2rem;
   margin-bottom: 1rem;
 }
