--- a/client/src/components/Question/Question.css
+++ b/client/src/components/Question/Question.css
@@ -6,7 +6,7 @@
   color: sienna;
 }
 
-.questionStyle h5{
+.questionStyle span{
 	font-weight: bolder;
 	/* color: #CD5C5C; */
   color: darkolivegreen;
