--- a/client/src/components/QuestionById/QuestionById.css
+++ b/client/src/components/QuestionById/QuestionById.css
@@ -11,3 +11,11 @@
 	text-align: justify;
 }
 
+.questionByIdStyle h5{
+	color: darkgoldenrod;
+}
+
+.questionByIdStyle h2{
+	color: darkkhaki;;
+}
+
