--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -27,20 +27,6 @@
     
   }
 
-html::-webkit-scrollbar {
- background-color: #ccc;
-}
-
-html::-webkit-scrollbar-button {
- background-color: Brown;
-
-}
-
-html::-webkit-scrollbar-thumb {
- background-color: Brown;
-
-} 
-
 .main-container {
 	display: flex;
 	flex-direction: column;
@@ -52,7 +38,7 @@ html::-webkit-scrollbar-thumb {
 	background-color: white;
 }
  
-.ask-btn {	
+/* .ask-btn {	
 	background-color: chocolate;
 	color: white;
 	z-index: 1;
@@ -64,7 +50,7 @@ html::-webkit-scrollbar-thumb {
 	border: 2px solid brown;
 }
 
-
+*/
 label, input {
 	display: block;
 	size: 50px;
@@ -82,29 +68,35 @@ label {
 input {
 	height: 30px;
 	font-size: 20px;
-}
+} 
 
-h1, h2 {
+h1 {
 	color: sandybrown;
 	padding: 0.5rem;
 
 }
+/* 
+h2 {
+	color: sandybrown;
+	padding: 0.5rem;
 
-.top-p {
+} */
+
+.main-title-p {
 	color: lightgray;
 	padding-top: 0;
 }
 
-.logout-button:hover {
+/* .logout-button:hover {
 	background-color: lightgreen;
 	color: black;
-}  
+}   */
 
-.categoryBtn {
+/* .categoryBtn {
 	width: 300px;
 	height: 40px;
 	margin: 10px;
-}
+} */
 
 form {
 	max-width: 600px;
@@ -112,12 +104,12 @@ form {
 	padding: auto;
 }
 
-#categoryDiv {
+/* #categoryDiv {
 	display: flex;
 	flex-direction: column;
 	padding-bottom: 20px;
 	margin: 10px;
-}
+} */
 
 .questionsDiv {	
 	border: none;
@@ -125,7 +117,7 @@ form {
 	margin: 0 auto;
 	background-color: white;
 }
-.navigation {
+/* .navigation {
 	overflow: hidden;
 	height: 10vh;	
 	background-color: white;
@@ -147,9 +139,9 @@ form {
 .navigation-list-item {
 	display: inline-block;	
 }
+ */
 
-
-.top {
+.main-title-box {
 	width: 40%;
 	margin: 10vh auto 3rem auto;
 	display: flex;
@@ -158,3 +150,17 @@ form {
 	align-items: center;
 	background-color:#282c34;
 }
+
+html::-webkit-scrollbar {
+ background-color: #ccc;
+}
+
+html::-webkit-scrollbar-button {
+ background-color: Brown;
+
+}
+
+html::-webkit-scrollbar-thumb {
+ background-color: Brown;
+
+} 
