--- a/client/src/pages/Navigation.css
+++ b/client/src/pages/Navigation.css
@@ -1,29 +1,48 @@
-.topnav {
+.topNav {
   overflow: hidden;
   background-color: #333;
 }
 
-.topnav-item {
-  float: left;
+.tent {
+  margin-left: 5rem;
+  margin-right: 2rem;
+}
+.topNav-item {
+  float: right;
   display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 15px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.2rem;
 }
 
-.topnav-item:hover {
+.topNav-item:hover {
   background-color: #ddd;
+  text-decoration: none;
+  height: 60px;
   color: black;
 }
 
-.topnav-item.active {
+.topNav-item span {
+  font-size: 1.2rem;
+  color: red;
+}
+
+.fufuf:hover {
+  background-color: rgba(255, 0, 0, 0.232);
+  color: #ccc;
+}
+
+.topNav-item span:hover {
+  color: #ccc;
+}
+.topNav-item .active {
   background-color: #04AA6D;
   color: white;
 }
 
-.topnav .icon {
+.topNav .icon {
   display: none;
 }
 
@@ -37,21 +56,25 @@
 }
 
 @media screen and (max-width: 600px) {
-  .topnav-item:not(:first-child) {display: none;}
-  .topnav-item.icon {
+  .topNav-item:not(:first-child) {display: none;}
+  .topNav-item.icon {
     float: right;
     display: block;
+  }
+  .tent {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .topNav.responsive {position: relative;}
+  .topNav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .topNav.responsive a {
     float: none;
     display: block;
     text-align: left;
