--- a/client/src/components/Question/Question.css
+++ b/client/src/components/Question/Question.css
@@ -83,5 +83,24 @@
     width: 15px;
     align-self: center;
   }
+
+  pre .ql-syntax{
+    width: min-content;
+  }
+  
+  .search-input {
+		max-width: auto;
+		background-color: sandybrown;
+		overflow: hidden;
+	}
+	
+	.search-div input::placeholder {
+		color: #ddd;
+	}
+
+	.search-div {
+		display: block;
+		 max-width: 100%;
+	}
   
 }
